--- a/requirements.txt
+++ b/requirements.txt
@@ -65,6 +65,7 @@ matplotlib==3.10.1
 matplotlib-inline==0.1.7
 mistune==3.1.2
 mpmath==1.3.0
+mysql-connector-python==9.3.0
 narwhals==1.31.0
 nbclient==0.10.2
 nbconvert==7.16.6
