--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ babel==2.17.0
 beautifulsoup4==4.13.3
 bleach==6.2.0
 blinker==1.9.0
+Brotli==1.1.0
 certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
@@ -16,6 +17,7 @@ click==8.1.8
 colorama==0.4.6
 comm==0.2.2
 contourpy==1.3.1
+cssselect2==0.8.0
 cycler==0.12.1
 debugpy==1.8.13
 decorator==5.2.1
@@ -90,9 +92,11 @@ psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
 pycparser==2.22
+pydyf==0.11.0
 Pygments==2.19.1
 PyMySQL==1.1.1
 pyparsing==3.2.1
+pyphen==0.17.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 python-json-logger==3.3.0
@@ -119,6 +123,7 @@ sympy==1.13.1
 terminado==0.18.1
 threadpoolctl==3.6.0
 tinycss2==1.4.0
+tinyhtml5==2.0.0
 torch==2.6.0+cpu
 tornado==6.4.2
 traitlets==5.14.3
@@ -128,7 +133,9 @@ tzdata==2025.1
 uri-template==1.3.0
 urllib3==2.3.0
 wcwidth==0.2.13
+weasyprint==65.1
 webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
 Werkzeug==3.1.3
+zopfli==0.2.3.post1
