--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ fastjsonschema==2.21.1
 filelock==3.13.1
 Flask==3.1.0
 Flask-Login==0.6.3
+Flask-Mail==0.10.0
 Flask-SQLAlchemy==3.1.1
 fonttools==4.56.0
 fqdn==1.5.1
