--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ cycler==0.12.1
 debugpy==1.8.13
 decorator==5.2.1
 defusedxml==0.7.1
+dnspython==2.7.0
 executing==2.2.0
 fastjsonschema==2.21.1
 filelock==3.13.1
@@ -133,6 +134,7 @@ typing_extensions==4.12.2
 tzdata==2025.1
 uri-template==1.3.0
 urllib3==2.3.0
+validate_email==1.3
 wcwidth==0.2.13
 weasyprint==65.1
 webcolors==24.11.1
