--- a/requirements.txt
+++ b/requirements.txt
@@ -127,8 +127,7 @@ terminado==0.18.1
 threadpoolctl==3.6.0
 tinycss2==1.4.0
 tinyhtml5==2.0.0
---extra-index-url https://download.pytorch.org/whl/cpu 
-torch==2.6.0
+torch==2.6.0+cpu
 tornado==6.4.2
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20241206
