--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ asttokens==3.0.0
 async-lru==2.0.5
 attrs==25.3.0
 babel==2.17.0
+backcall==0.2.0
 beautifulsoup4==4.13.3
 bleach==6.2.0
 blinker==1.9.0
@@ -23,6 +24,7 @@ debugpy==1.8.13
 decorator==5.2.1
 defusedxml==0.7.1
 dnspython==2.7.0
+docopt==0.6.2
 executing==2.2.0
 fastjsonschema==2.21.1
 filelock==3.13.1
@@ -42,7 +44,7 @@ httpcore==1.0.7
 httpx==0.28.1
 idna==3.10
 ipykernel==6.29.5
-ipython==9.0.2
+ipython==8.12.3
 ipython_pygments_lexers==1.1.1
 isoduration==20.11.0
 itsdangerous==2.2.0
@@ -86,7 +88,9 @@ pandas==2.2.3
 pandocfilters==1.5.1
 parso==0.8.4
 pexpect==4.9.0
+pickleshare==0.7.5
 pillow==11.1.0
+pipreqs==0.5.0
 platformdirs==4.3.6
 plotly==6.0.1
 prometheus_client==0.21.1
@@ -127,8 +131,7 @@ terminado==0.18.1
 threadpoolctl==3.6.0
 tinycss2==1.4.0
 tinyhtml5==2.0.0
---extra-index-url https://download.pytorch.org/whl/cpu 
-torch==2.6.0
+torch==2.6.0+cpu
 tornado==6.4.2
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20241206
@@ -143,4 +146,5 @@ webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
 Werkzeug==3.1.3
+yarg==0.1.9
 zopfli==0.2.3.post1
